--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -32,12 +32,34 @@ product_selector_hint: Producte
 product_selector_icon_description: Selector de producte
 product_category_recent: Recents
 product_category_diesel: Gasolis
-product_category_gasoline: Gasolines
-product_category_natural_gas: Gasos Naturals i Biogàs
+product_category_gasoline: Benzines
+product_category_natural_gas: Gasos Naturals i Biogassos
 product_category_biofuels: Biocombustibles
 product_category_other_gases: Altres Gasos
-product_category_additives: Aditius
-product_name_gasoleo_a: Gasoli A
+product_category_additives: Additius
+product_name_gasoleo_a: Gasoleo A
+product_name_gasoleo_premium: Gasoleo Premium
+product_name_gasoleo_b: Gasoleo B
+product_name_diesel_renovable: Dièsel Renovable
+product_name_gasolina_95_e10: Benzina 95 E10
+product_name_gasolina_95_e25: Benzina 95 E25
+product_name_gasolina_95_e5: Benzina 95 E5
+product_name_gasolina_95_e5_premium: Benzina 95 E5 Premium
+product_name_gasolina_95_e85: Benzina 95 E85
+product_name_gasolina_98_e10: Benzina 98 E10
+product_name_gasolina_98_e5: Benzina 98 E5
+product_name_gasolina_renovable: Benzina Renovable
+product_name_gas_natural_comprimido: Gas Natural Comprimit
+product_name_gas_natural_licuado: Gas Natural Licuat
+product_name_biogas_natural_comprimido: Biogas Natural Comprimit
+product_name_biogas_natural_licuado: Biogas Natural Licuat
+product_name_biodiesel: Biodièsel
+product_name_bioetanol: Bioetanol
+product_name_gases_licuados_del_petroleo: Gasos Lliquats del Petroli
+product_name_hidrogeno: Hidrogen
+product_name_amoniaco: Amoníac
+product_name_metanol: Metanol
+product_name_adblue: Adblue
 location_selector_hint: Ubicació
 location_selector_locate_device: Ubica el dispositiu
 price_not_public: ✱ Preu condicionat
