✨ European categories: Diesel, Gasoline, Gaseous
Follows https://www.fuel-identifiers.eu/

--- a/app/src/main/res/values-an/strings.xml
+++ b/app/src/main/res/values-an/strings.xml
@@ -32,14 +32,34 @@
     <string name="no_gas_stations">No s\'han trobau estacions de servicio con l\'actual criterio</string>
     <string name="product_selector_hint">Producto</string>
     <string name="product_selector_icon_description">Selector de producto</string>
-    <string name="product_category_recent">Recientes</string>
-    <string name="product_category_diesel">Gasoleos</string>
+    <string name="product_category_recent">Recients</string>
+    <string name="product_category_diesel">Gasóleos</string>
     <string name="product_category_gasoline">Gasolinas</string>
-    <string name="product_category_natural_gas">Gasos Naturals y Biogases</string>
-    <string name="product_category_biofuels">Biocombustibles</string>
-    <string name="product_category_other_gases">Altros Gasos</string>
+    <string name="product_category_gaseous">Gasos</string>
     <string name="product_category_additives">Aditivos</string>
-    <string name="product_name_gasoleo_a">Gasoléo A</string>
+    <string name="product_name_gasoleo_a">Gasoleo A</string>
+    <string name="product_name_gasoleo_premium">Gasoleo Premium</string>
+    <string name="product_name_gasoleo_b">Gasoleo B</string>
+    <string name="product_name_diesel_renovable">Diésel Renovable</string>
+    <string name="product_name_gasolina_95_e10">Benzina 95 E10</string>
+    <string name="product_name_gasolina_95_e25">Benzina 95 E25</string>
+    <string name="product_name_gasolina_95_e5">Benzina 95 E5</string>
+    <string name="product_name_gasolina_95_e5_premium">Benzina 95 E5 Premium</string>
+    <string name="product_name_gasolina_95_e85">Benzina 95 E85</string>
+    <string name="product_name_gasolina_98_e10">Benzina 98 E10</string>
+    <string name="product_name_gasolina_98_e5">Benzina 98 E5</string>
+    <string name="product_name_gasolina_renovable">Benzina Renovable</string>
+    <string name="product_name_gas_natural_comprimido">Gas Natural Comprimido</string>
+    <string name="product_name_gas_natural_licuado">Gas Natural Licuado</string>
+    <string name="product_name_biogas_natural_comprimido">Biogas Natural Comprimido</string>
+    <string name="product_name_biogas_natural_licuado">Biogas Natural Licuado</string>
+    <string name="product_name_biodiesel">Biodiesel</string>
+    <string name="product_name_bioetanol">Bioetanol</string>
+    <string name="product_name_gases_licuados_del_petroleo">Gases licuados del petróleo</string>
+    <string name="product_name_hidrogeno">Hidrogeno</string>
+    <string name="product_name_amoniaco">Amoniaco</string>
+    <string name="product_name_metanol">Metanol</string>
+    <string name="product_name_adblue">Adblue</string>
     <string name="location_selector_hint">Ubicación</string>
     <string name="location_selector_locate_device">Ubica o dispositivo</string>
     <string name="price_not_public">✱ Preu condicionau</string>
