--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -32,14 +32,34 @@
     <string name="no_gas_stations">لم يتم العثور على محطات وقود مطابقة</string>
     <string name="product_selector_hint">المنتج</string>
     <string name="product_selector_icon_description">محدد المنتج</string>
-    <string name="product_category_recent">مؤخراً</string>
-    <string name="product_category_diesel">الديزل</string>
-    <string name="product_category_gasoline">البنزين</string>
-    <string name="product_category_natural_gas">الغاز الطبيعي و الغاز الحيوي</string>
-    <string name="product_category_biofuels">الوقود الحيوي</string>
-    <string name="product_category_other_gases">الغازات الأخرى</string>
-    <string name="product_category_additives">الإضافات</string>
-    <string name="product_name_gasoleo_a">ديزل أ</string>
+    <string name="product_category_recent">ﻡﺆﺧﺭﺍً</string>
+    <string name="product_category_diesel">ﺎﻟﺪﻳﺰﻟ</string>
+    <string name="product_category_gasoline">ﺎﻠﺒﻧﺰﻴﻧ</string>
+    <string name="product_category_gaseous">الغازات</string>
+    <string name="product_category_additives">ﺍﻺﺿﺎﻓﺎﺗ</string>
+    <string name="product_name_gasoleo_a">ﺪﻳﺰﻟ ﺃ</string>
+    <string name="product_name_gasoleo_premium">ﺪﻳﺰﻟ ﺒﺮﻳﻤﻴﻮﻡ</string>
+    <string name="product_name_gasoleo_b">ﺪﻳﺰﻟ ﺏ</string>
+    <string name="product_name_diesel_renovable">ﺪﻳﺰﻟ ﺍﻟﻘﺎﺑﻞ ﻟﻠﺘﺠﺪﻳﺪ</string>
+    <string name="product_name_gasolina_95_e10">ﺒﻨﺰﻳﻨﺎ 95 E10</string>
+    <string name="product_name_gasolina_95_e25">ﺒﻨﺰﻳﻨﺎ 95 E25</string>
+    <string name="product_name_gasolina_95_e5">ﺒﻨﺰﻳﻨﺎ 95 E5</string>
+    <string name="product_name_gasolina_95_e5_premium">ﺒﻨﺰﻳﻨﺎ 95 E5 ﺒﺮﻳﻤﻴﻮﻡ</string>
+    <string name="product_name_gasolina_95_e85">ﺒﻨﺰﻳﻨﺎ 95 E85</string>
+    <string name="product_name_gasolina_98_e10">ﺒﻨﺰﻳﻨﺎ 98 E10</string>
+    <string name="product_name_gasolina_98_e5">ﺒﻨﺰﻳﻨﺎ 98 E5</string>
+    <string name="product_name_gasolina_renovable">ﺒﻨﺰﻳﻨﺎ ﺍﻟﻘﺎﺑﻠﺔ ﻟﻠﺘﺠﺪﻳﺪ</string>
+    <string name="product_name_gas_natural_comprimido">ﺎﻟﻐﺎﺯ ﺍﻟﻄﺒﻴﻌﻲ ﺍﻟﻤﺸﺪﻭﺩ</string>
+    <string name="product_name_gas_natural_licuado">ﺎﻟﻐﺎﺯ ﺍﻟﻄﺒﻴﻌﻲ ﺍﻟﺴﺎﺋﻞ</string>
+    <string name="product_name_biogas_natural_comprimido">ﺒﻴﻮ ﺍﻟﻐﺎﺯ ﺍﻟﻄﺒﻴﻌﻲ ﺍﻟﻤﺸﺪﻭﺩ</string>
+    <string name="product_name_biogas_natural_licuado">ﺒﻴﻮ ﺍﻟﻐﺎﺯ ﺍﻟﻄﺒﻴﻌﻲ ﺍﻟﺴﺎﺋﻞ</string>
+    <string name="product_name_biodiesel">ﺑﻴﻮﺩﻳﺰﻟ</string>
+    <string name="product_name_bioetanol">ﺑﻴﻮﺇﺗﺎﻧﻭﻝ</string>
+    <string name="product_name_gases_licuados_del_petroleo">ﺍﻟﻐﺎﺯﺍﺕ ﺍﻟﻤﺴﻴﻠﺔ ﻣﻦ ﺍﻟﺒﺘﺮﻭﻟﻴﻭ</string>
+    <string name="product_name_hidrogeno">ﺍﻟﻬﻴﺪﺭﻭﺟﻴﻦ</string>
+    <string name="product_name_amoniaco">ﺍﻷﻣﻮﻧﻲﺎﻙ</string>
+    <string name="product_name_metanol">ﺍﻟﻤﻴﺜﺎﻧﻮﻝ</string>
+    <string name="product_name_adblue">ﺁﺩﺒﻼﻭ</string>
     <string name="location_selector_hint">الموقع</string>
     <string name="location_selector_locate_device">حدد موقع الجهاز</string>
     <string name="price_not_public">✱ السعر مشروط</string>
