--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -33,13 +33,33 @@
     <string name="product_selector_hint">Producte</string>
     <string name="product_selector_icon_description">Selector de producte</string>
     <string name="product_category_recent">Recents</string>
-    <string name="product_category_diesel">Gasolis</string>
-    <string name="product_category_gasoline">Gasolines</string>
-    <string name="product_category_natural_gas">Gasos Naturals i Biogàs</string>
-    <string name="product_category_biofuels">Biocombustibles</string>
-    <string name="product_category_other_gases">Altres Gasos</string>
-    <string name="product_category_additives">Aditius</string>
-    <string name="product_name_gasoleo_a">Gasoli A</string>
+    <string name="product_category_diesel">Gasoils</string>
+    <string name="product_category_gasoline">Benzines</string>
+    <string name="product_category_gaseous">Gasosos</string>
+    <string name="product_category_additives">Additius</string>
+    <string name="product_name_gasoleo_a">Gasoil A</string>
+    <string name="product_name_gasoleo_premium">Gasoil Premium</string>
+    <string name="product_name_gasoleo_b">Gasoil B</string>
+    <string name="product_name_diesel_renovable">Gasoil Renovable</string>
+    <string name="product_name_gasolina_95_e10">Benzina 95 E10</string>
+    <string name="product_name_gasolina_95_e25">Benzina 95 E25</string>
+    <string name="product_name_gasolina_95_e5">Benzina 95 E5</string>
+    <string name="product_name_gasolina_95_e5_premium">Benzina 95 E5 Premium</string>
+    <string name="product_name_gasolina_95_e85">Benzina 95 E85</string>
+    <string name="product_name_gasolina_98_e10">Benzina 98 E10</string>
+    <string name="product_name_gasolina_98_e5">Benzina 98 E5</string>
+    <string name="product_name_gasolina_renovable">Benzina Renovable</string>
+    <string name="product_name_gas_natural_comprimido">Gas Natural Comprimit</string>
+    <string name="product_name_gas_natural_licuado">Gas Natural Licuat</string>
+    <string name="product_name_biogas_natural_comprimido">Biogas Natural Comprimit</string>
+    <string name="product_name_biogas_natural_licuado">Biogas Natural Licuat</string>
+    <string name="product_name_biodiesel">Biodièsel</string>
+    <string name="product_name_bioetanol">Bioetanol</string>
+    <string name="product_name_gases_licuados_del_petroleo">Gasos Lliquats del Petroli</string>
+    <string name="product_name_hidrogeno">Hidrogen</string>
+    <string name="product_name_amoniaco">Amoníac</string>
+    <string name="product_name_metanol">Metanol</string>
+    <string name="product_name_adblue">Adblue</string>
     <string name="location_selector_hint">Ubicació</string>
     <string name="location_selector_locate_device">Ubica el dispositiu</string>
     <string name="price_not_public">✱ Preu condicionat</string>
