--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -33,13 +33,33 @@
     <string name="product_selector_hint">Producto</string>
     <string name="product_selector_icon_description">Selector de producto</string>
     <string name="product_category_recent">Recientes</string>
-    <string name="product_category_diesel">Gasoleos</string>
-    <string name="product_category_gasoline">Gasolinas</string>
-    <string name="product_category_natural_gas">Gas Naturales y Biogases</string>
-    <string name="product_category_biofuels">Biocombustibles</string>
-    <string name="product_category_other_gases">Otros Gases</string>
+    <string name="product_category_diesel">Gasóleo</string>
+    <string name="product_category_gasoline">Gasolina</string>
+    <string name="product_category_gaseous">Gaseosos</string>
     <string name="product_category_additives">Aditivos</string>
     <string name="product_name_gasoleo_a">Gasóleo A</string>
+    <string name="product_name_gasoleo_premium">Gasóleo Premium</string>
+    <string name="product_name_gasoleo_b">Gasóleo B</string>
+    <string name="product_name_diesel_renovable">Diésel Renovable</string>
+    <string name="product_name_gasolina_95_e10">Gasolina 95 E10</string>
+    <string name="product_name_gasolina_95_e25">Gasolina 95 E25</string>
+    <string name="product_name_gasolina_95_e5">Gasolina 95 E5</string>
+    <string name="product_name_gasolina_95_e5_premium">Gasolina 95 E5 Premium</string>
+    <string name="product_name_gasolina_95_e85">Gasolina 95 E85</string>
+    <string name="product_name_gasolina_98_e10">Gasolina 98 E10</string>
+    <string name="product_name_gasolina_98_e5">Gasolina 98 E5</string>
+    <string name="product_name_gasolina_renovable">Gasolina Renovable</string>
+    <string name="product_name_gas_natural_comprimido">Gas Natural Comprimido</string>
+    <string name="product_name_gas_natural_licuado">Gas Natural Licuado</string>
+    <string name="product_name_biogas_natural_comprimido">Biogas Natural Comprimido</string>
+    <string name="product_name_biogas_natural_licuado">Biogas Natural Licuado</string>
+    <string name="product_name_biodiesel">Biodiésel</string>
+    <string name="product_name_bioetanol">Bioetanol</string>
+    <string name="product_name_gases_licuados_del_petroleo">Gases licuados del petróleo</string>
+    <string name="product_name_hidrogeno">Hidrógeno</string>
+    <string name="product_name_amoniaco">Amoníaco</string>
+    <string name="product_name_metanol">Metanol</string>
+    <string name="product_name_adblue">Adblue</string>
     <string name="location_selector_hint">Ubicación</string>
     <string name="location_selector_locate_device">Ubica el dispositivo</string>
     <string name="price_not_public">✱ Precio condicionado</string>
