--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -33,13 +33,33 @@
     <string name="product_selector_hint">Produktua</string>
     <string name="product_selector_icon_description">Produktu-hautagailua</string>
     <string name="product_category_recent">Azkenak</string>
-    <string name="product_category_diesel">Gasolioak</string>
-    <string name="product_category_gasoline">Gasolina</string>
-    <string name="product_category_natural_gas">Gas Natural eta Biogasak</string>
-    <string name="product_category_biofuels">Biokargagarriek</string>
-    <string name="product_category_other_gases">Beste Gasak</string>
+    <string name="product_category_diesel">Dieselak</string>
+    <string name="product_category_gasoline">Benzinak</string>
+    <string name="product_category_gaseous">Gasosoak</string>
     <string name="product_category_additives">Gehigarriak</string>
     <string name="product_name_gasoleo_a">Gasolioa A</string>
+    <string name="product_name_gasoleo_premium">Gasolioa Premium</string>
+    <string name="product_name_gasoleo_b">Gasolioa B</string>
+    <string name="product_name_diesel_renovable">Diesel Berriztagarria</string>
+    <string name="product_name_gasolina_95_e10">Benzina 95 E10</string>
+    <string name="product_name_gasolina_95_e25">Benzina 95 E25</string>
+    <string name="product_name_gasolina_95_e5">Benzina 95 E5</string>
+    <string name="product_name_gasolina_95_e5_premium">Benzina 95 E5 Premium</string>
+    <string name="product_name_gasolina_95_e85">Benzina 95 E85</string>
+    <string name="product_name_gasolina_98_e10">Benzina 98 E10</string>
+    <string name="product_name_gasolina_98_e5">Benzina 98 E5</string>
+    <string name="product_name_gasolina_renovable">Benzina Berriztagarria</string>
+    <string name="product_name_gas_natural_comprimido">Gas Naturala Konprimatua</string>
+    <string name="product_name_gas_natural_licuado">Gas Naturala Likidotua</string>
+    <string name="product_name_biogas_natural_comprimido">Biogas Naturala Konprimatua</string>
+    <string name="product_name_biogas_natural_licuado">Biogas Naturala Likidotua</string>
+    <string name="product_name_biodiesel">Biodiesel</string>
+    <string name="product_name_bioetanol">Bioetanol</string>
+    <string name="product_name_gases_licuados_del_petroleo">Gas Natural Llikuidatu Petrolioa</string>
+    <string name="product_name_hidrogeno">Hidrogenoa</string>
+    <string name="product_name_amoniaco">Amoniakoa</string>
+    <string name="product_name_metanol">Metanola</string>
+    <string name="product_name_adblue">Adblue</string>
     <string name="location_selector_hint">Kokalekua</string>
     <string name="location_selector_locate_device">Kokatu gailua</string>
     <string name="price_not_public">✱ Prezio baldintzatua</string>
