--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,11 +35,31 @@
     <string name="product_category_recent">Recent</string>
     <string name="product_category_diesel">Diesel</string>
     <string name="product_category_gasoline">Gasoline</string>
-    <string name="product_category_natural_gas">Natural Gas &amp; Biogases</string>
-    <string name="product_category_biofuels">Biofuels</string>
-    <string name="product_category_other_gases">Other Gases</string>
+    <string name="product_category_gaseous">Gaseous</string>
     <string name="product_category_additives">Additives</string>
-    <string name="product_name_gasoleo_a">Diesel A</string>
+    <string name="product_name_gasoleo_a">Gasoleo A</string>
+    <string name="product_name_gasoleo_premium">Gasoleo Premium</string>
+    <string name="product_name_gasoleo_b">Gasoleo B</string>
+    <string name="product_name_diesel_renovable">Renewable Diesel</string>
+    <string name="product_name_gasolina_95_e10">Gasoline 95 E10</string>
+    <string name="product_name_gasolina_95_e25">Gasoline 95 E25</string>
+    <string name="product_name_gasolina_95_e5">Gasoline 95 E5</string>
+    <string name="product_name_gasolina_95_e5_premium">Gasoline 95 E5 Premium</string>
+    <string name="product_name_gasolina_95_e85">Gasoline 95 E85</string>
+    <string name="product_name_gasolina_98_e10">Gasoline 98 E10</string>
+    <string name="product_name_gasolina_98_e5">Gasoline 98 E5</string>
+    <string name="product_name_gasolina_renovable">Renewable Gasoline</string>
+    <string name="product_name_gas_natural_comprimido">Compressed Natural Gas</string>
+    <string name="product_name_gas_natural_licuado">Liquefied Natural Gas</string>
+    <string name="product_name_biogas_natural_comprimido">Compressed Biogas</string>
+    <string name="product_name_biogas_natural_licuado">Liquefied Biogas</string>
+    <string name="product_name_biodiesel">Biodiesel</string>
+    <string name="product_name_bioetanol">Bioethanol</string>
+    <string name="product_name_gases_licuados_del_petroleo">Liquefied Petroleum Gas</string>
+    <string name="product_name_hidrogeno">Hydrogen</string>
+    <string name="product_name_amoniaco">Ammonia</string>
+    <string name="product_name_metanol">Methanol</string>
+    <string name="product_name_adblue">AdBlue</string>
     <string name="location_selector_hint">Location</string>
     <string name="location_selector_locate_device">Locate device</string>
     <string name="price_not_public">✱ Conditional price</string>
