--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -33,9 +33,7 @@ product_selector_icon_description: Produktu-hautagailua
 product_category_recent: Azkenak
 product_category_diesel: Dieselak
 product_category_gasoline: Benzinak
-product_category_natural_gas: Gas Naturala eta Biogasa
-product_category_biofuels: Bioerregaienak
-product_category_other_gases: Beste Gasak
+product_category_gaseous: Gasosoak
 product_category_additives: Gehigarriak
 product_name_gasoleo_a: Gasolioa A
 product_name_gasoleo_premium: Gasolioa Premium
